# life-game

./: .coverage  .flake8  .gitignore  .pylintrc  README.md  main.py  pyproject.toml  test.py
life_game/: Functions.py  GameLaunch.py  main.py  paths.py  temp.py  util.py
life_game/balance/: event_dist.py
life_game/components/: attr_cards.py  components.py  constants.py  event_cards.json  event_cards.py
life_game/old/: Functions.py  GameControl.py  GameLaunch2.py
life_game/play/: README.md  actions.py  events.py  game.py  game_space.py  play_utils.py  players.py  round.py
life_game/setup/: README.md  attr_cards.py  boards.py  cards.py  components.py  comps_2.py  concepts.py  deal.py  decks.py  definitions.py  event_cards.py  events.py  game.py  logic.py  players.py  setup_exceptions.py  test.py
life_game/setup/model/: card.py  card_stat.py
tests/: readme.md  test_deal.py  test_setup.py  test_setup_cards.py  test_setup_components.py  test_setup_players.py  utils.py
tests/test_components/: test_attr_cards.py  test_constants.py  test_event_cards.py
tests/test_play/: test_game.py  test_play_event.py  test_play_game.py  test_play_player.py
tests/test_setup/: test_cards.py  test_deal.py  test_setup_attr_cards.py  test_setup_cards.py  test_setup_components.py  test_setup_deal.py  test_setup_event_cards.py  test_setup_players.py
