[tool.poetry]
name = "life-game"
version = "0.1.0"
description = ""
authors = ["P Sinfield"]
readme = "README.md"
packages = [{include = "life_game"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
