[tool.poetry]
name = "life-game"
version = "0.1.0"
description = ""
authors = ["P Sinfield"]
readme = "README.md"
packages = [{include = "life_game"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = {version = "^23.1a1", allow-prereleases = true}
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
