[tool.poetry]
name = "life-game"
version = "0.1.0"
description = ""
authors = ["P Sinfield"]
readme = "README.md"
packages = [{include = "life_game"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
isort = "^5.12.0"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.plugins."console_scripts"]
# cstest = "cstest.main:run_cstest"

[tool.pytest.ini_options]
addopts = "--cov=life_game"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "cstest"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

#tool.setuptools.package-data]
#flexi = "py.typed"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
